--- a/components/index/index.css
+++ b/components/index/index.css
@@ -89,7 +89,7 @@
     text-align: center;
     font-size: 18px; }
     .zmiti-index-main-ui .zmiti-logo img {
-      width: .8rem;
+      width: 1rem;
       display: block;
       margin: 0 auto .1rem; }
   .zmiti-index-main-ui .zmiti-entry {
