--- a/components/index/index.scss
+++ b/components/index/index.scss
@@ -74,7 +74,7 @@ $bgColor: #4081dd;
 		text-align: center;
 		font-size: 18px;
 		img{
-			width: .8rem;
+			width: 1rem;
 			display: block;
 			margin: 0 auto .1rem;
 
