--- a/components/upload/index.css
+++ b/components/upload/index.css
@@ -110,6 +110,8 @@
           margin-bottom: 10px;
           border: 1px solid #fff;
           box-sizing: border-box; }
+          .zmiti-upload-main-ui .zmiti-upload-bottom li > div:nth-of-type(1).active {
+            border: 2px solid #ca141f; }
         .zmiti-upload-main-ui .zmiti-upload-bottom li > div:nth-of-type(2) {
           font-size: 20px; }
   .zmiti-upload-main-ui .zmiti-img-clip-C {
