--- a/components/index/index.css
+++ b/components/index/index.css
@@ -1,8 +1,3 @@
-/*.ant-btn:focus, .ant-btn:hover,.ant-input:focus, .ant-input:hover {
-    background-color: #fff;
-    border-color: #bf1616;
-    box-shadow: 0 0 0 2px rgba(191, 22, 22, 0.1);
-}*/
 .lt-full {
   width: 100%;
   height: 100%;
@@ -64,7 +59,9 @@
       animation: rotate1 0.8s linear forwards; }
   .zmiti-index-main-ui .zmiti-xiongan {
     position: absolute;
-    top: 20%; }
+    top: 10%;
+    width: 14rem;
+    left: -2rem; }
     .zmiti-index-main-ui .zmiti-xiongan.active {
       -webkit-animation: rotate1 0.8s linear forwards;
       animation: rotate1 0.8s linear forwards; }
@@ -100,7 +97,7 @@
     border-radius: 10px;
     position: absolute;
     left: 4rem;
-    bottom: .5rem;
+    bottom: 1rem;
     z-index: 10;
     color: #ca141f;
     font-size: .45rem;
