--- a/components/main/index.css
+++ b/components/main/index.css
@@ -1,8 +1,3 @@
-/*.ant-btn:focus, .ant-btn:hover,.ant-input:focus, .ant-input:hover {
-    background-color: #fff;
-    border-color: #bf1616;
-    box-shadow: 0 0 0 2px rgba(191, 22, 22, 0.1);
-}*/
 .lt-full {
   width: 100%;
   height: 100%;
@@ -90,7 +85,7 @@
       text-indent: 2em;
       margin-left: 40px;
       margin-top: 10px;
-      color: #828a8f; }
+      color: #333; }
     .zmiti-main-main-ui .zmiti-img-text > h4 {
       text-indent: 0;
       font-size: 36px; }
@@ -159,7 +154,10 @@
       height: .07rem;
       background: #fff;
       border-top-left-radius: 10px;
-      border-bottom-left-radius: 10px; }
+      border-bottom-left-radius: 10px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
+      -webkit-animation: ar 1s linear infinite alternate;
+      animation: ar 1s linear infinite alternate; }
     .zmiti-main-main-ui .zmiti-next:after, .zmiti-main-main-ui .zmiti-prev:after {
       width: 30%;
       -webkit-transform: rotate(-40deg);
@@ -178,7 +176,9 @@
       height: .07rem;
       background: #fff;
       border-top-left-radius: 10px;
-      border-bottom-left-radius: 10px; }
+      border-bottom-left-radius: 10px;
+      -webkit-animation: ar 0.6s linear infinite alternate;
+      animation: ar 0.6s linear infinite alternate; }
     .zmiti-main-main-ui .zmiti-next:after {
       width: 30%;
       left: auto;
@@ -187,5 +187,11 @@
       transform: rotate(40deg);
       -webkit-transform-origin: right;
       transform-origin: right; }
+
+@-webkit-keyframes ar {
+  from {
+    margin-top: -5px; }
+  to {
+    margin-top: 5px; } }
 
 /*# sourceMappingURL=index.css.map */
