--- a/components/main-cache/index.css
+++ b/components/main-cache/index.css
@@ -1,8 +1,3 @@
-/*.ant-btn:focus, .ant-btn:hover,.ant-input:focus, .ant-input:hover {
-    background-color: #fff;
-    border-color: #bf1616;
-    box-shadow: 0 0 0 2px rgba(191, 22, 22, 0.1);
-}*/
 .lt-full {
   width: 100%;
   height: 100%;
@@ -33,9 +28,170 @@
   to {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg); } }
-.zmiti-main-main-ui > canvas {
-  position: absolute;
-  left: 0;
-  top: 0; }
+.zmiti-main-main-ui {
+  opacity: 0;
+  z-index: -1;
+  -webkit-transition: 1.5s;
+  transition: 1.5s; }
+  .zmiti-main-main-ui > canvas {
+    position: absolute;
+    left: 0;
+    top: 0; }
+  .zmiti-main-main-ui.show {
+    opacity: 1;
+    z-index: 100; }
+  .zmiti-main-main-ui.text-enter, .zmiti-main-main-ui.text-leave-to {
+    opacity: 0; }
+  .zmiti-main-main-ui > .zmiti-main-canvas-C {
+    position: absolute;
+    left: 0;
+    top: 0; }
+  .zmiti-main-main-ui .zmiti-dashiji {
+    position: absolute;
+    width: 1.6rem;
+    top: 1.8rem;
+    left: .5rem;
+    z-index: 102; }
+    .zmiti-main-main-ui .zmiti-dashiji.text-enter-active, .zmiti-main-main-ui .zmiti-dashiji.text-leave-active {
+      -webkit-transition: 0.5s;
+      transition: 0.5s; }
+    .zmiti-main-main-ui .zmiti-dashiji.text-enter, .zmiti-main-main-ui .zmiti-dashiji.text-leave-to {
+      opacity: 0;
+      -webkit-transform: translate3d(0, -30px, 0);
+      transform: translate3d(0, -30px, 0); }
+  .zmiti-main-main-ui .zmiti-img-text {
+    position: absolute;
+    width: 8rem;
+    left: 1rem;
+    top: 3.5rem;
+    z-index: 40;
+    padding: 24px;
+    box-sizing: border-box; }
+    .zmiti-main-main-ui .zmiti-img-text.text-enter-active, .zmiti-main-main-ui .zmiti-img-text.text-leave-active {
+      -webkit-transition: 0.5s;
+      transition: 0.5s; }
+    .zmiti-main-main-ui .zmiti-img-text.text-enter, .zmiti-main-main-ui .zmiti-img-text.text-leave-to {
+      opacity: 0;
+      -webkit-transform: translate3d(0, -30px, 0);
+      transform: translate3d(0, -30px, 0); }
+    .zmiti-main-main-ui .zmiti-img-text > img.zmiti-text-bg {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: 0; }
+    .zmiti-main-main-ui .zmiti-img-text > h4, .zmiti-main-main-ui .zmiti-img-text > div {
+      position: relative;
+      z-index: 1;
+      text-indent: 2em;
+      margin-left: 40px;
+      margin-top: 10px;
+      color: #333; }
+    .zmiti-main-main-ui .zmiti-img-text > h4 {
+      text-indent: 0;
+      font-size: 36px; }
+    .zmiti-main-main-ui .zmiti-img-text > div {
+      margin-top: 20px; }
+    .zmiti-main-main-ui .zmiti-img-text > .zmiti-caidai {
+      position: absolute;
+      left: -1.9rem;
+      width: 1.5rem;
+      top: 1rem; }
+    .zmiti-main-main-ui .zmiti-img-text > .zmiti-caidai1 {
+      left: auto;
+      right: .4rem;
+      top: -1rem;
+      width: .5rem; }
+    .zmiti-main-main-ui .zmiti-img-text .zmiti-text-line {
+      position: absolute;
+      width: 1rem;
+      height: 4rem;
+      right: .5rem; }
+      .zmiti-main-main-ui .zmiti-img-text .zmiti-text-line img {
+        width: .6rem;
+        position: absolute;
+        left: .2rem;
+        bottom: 0; }
+      .zmiti-main-main-ui .zmiti-img-text .zmiti-text-line span {
+        width: .1rem;
+        position: absolute;
+        left: .45rem;
+        top: 0;
+        height: 100%;
+        background: rgba(255, 255, 227, 0.8); }
+  .zmiti-main-main-ui .zmiti-title {
+    position: absolute;
+    z-index: 20;
+    top: 0;
+    left: 0;
+    width: 4.5rem; }
+  .zmiti-main-main-ui .zmiti-year {
+    position: absolute;
+    z-index: 20;
+    top: .2rem;
+    right: 1.2rem; }
+  .zmiti-main-main-ui .zmiti-photo {
+    position: absolute;
+    width: 2rem;
+    z-index: 20;
+    bottom: .7rem;
+    left: 4rem;
+    text-align: center;
+    color: #fff; }
+  .zmiti-main-main-ui .zmiti-next, .zmiti-main-main-ui .zmiti-prev {
+    position: absolute;
+    width: 1.4rem;
+    height: 1rem;
+    left: .4rem;
+    bottom: .4rem;
+    z-index: 44;
+    z-index: 100; }
+    .zmiti-main-main-ui .zmiti-next:before, .zmiti-main-main-ui .zmiti-next:after, .zmiti-main-main-ui .zmiti-prev:before, .zmiti-main-main-ui .zmiti-prev:after {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 60%;
+      width: 100%;
+      height: .07rem;
+      background: #fff;
+      border-top-left-radius: 10px;
+      border-bottom-left-radius: 10px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
+      -webkit-animation: ar 1s linear infinite alternate;
+      animation: ar 1s linear infinite alternate; }
+    .zmiti-main-main-ui .zmiti-next:after, .zmiti-main-main-ui .zmiti-prev:after {
+      width: 30%;
+      -webkit-transform: rotate(-40deg);
+      transform: rotate(-40deg);
+      -webkit-transform-origin: left;
+      transform-origin: left; }
+  .zmiti-main-main-ui .zmiti-next {
+    left: auto;
+    right: .4rem; }
+    .zmiti-main-main-ui .zmiti-next:before, .zmiti-main-main-ui .zmiti-next:after {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 60%;
+      width: 100%;
+      height: .07rem;
+      background: #fff;
+      border-top-left-radius: 10px;
+      border-bottom-left-radius: 10px;
+      -webkit-animation: ar 0.6s linear infinite alternate;
+      animation: ar 0.6s linear infinite alternate; }
+    .zmiti-main-main-ui .zmiti-next:after {
+      width: 30%;
+      left: auto;
+      right: 0;
+      -webkit-transform: rotate(40deg);
+      transform: rotate(40deg);
+      -webkit-transform-origin: right;
+      transform-origin: right; }
+
+@-webkit-keyframes ar {
+  from {
+    margin-top: -5px; }
+  to {
+    margin-top: 5px; } }
 
 /*# sourceMappingURL=index.css.map */
