--- a/components/main-cache/index.scss
+++ b/components/main-cache/index.scss
@@ -8,6 +8,227 @@ $color: #fffb88;
 	&>canvas{
 		@include pos(a);
 		left: 0;top: 0;
-		
+
 	}
+
+	opacity:0;
+	z-index: -1;
+	
+	&.show{
+		opacity: 1;
+		z-index: 100;
+	}
+
+	@include transition(1.5s);
+	&.text-enter-active, &.text-leave-active {
+		
+		//@include transform(translate3d(0,20px,0));
+	}
+
+	&.text-enter, &.text-leave-to {
+		opacity: 0;
+	}
+
+	&>.zmiti-main-canvas-C{
+		@include pos(a);
+		left: 0;top: 0;		
+	}
+
+	.zmiti-dashiji{
+		@include pos(a);
+		width: 1.6rem;
+		top: 1.8rem;
+		left: .5rem;
+		z-index: 102;
+
+		&.text-enter-active, &.text-leave-active {
+			@include transition(.5s);
+			//@include transform(translate3d(0,20px,0));
+		}
+
+		&.text-enter, &.text-leave-to {
+			opacity: 0;
+			@include transform(translate3d(0,-30px,0));
+		}
+	}
+
+	.zmiti-img-text{
+		&.text-enter-active, &.text-leave-active {
+			@include transition(.5s);
+			//@include transform(translate3d(0,20px,0));
+		}
+
+		&.text-enter, &.text-leave-to {
+			opacity: 0;
+			@include transform(translate3d(0,-30px,0));
+		}
+
+		@include pos(a);
+		width: 8rem;
+		left: 1rem;
+		top: 3.5rem;
+		z-index: 40;
+		padding: 24px;
+		box-sizing:border-box;
+		&>img.zmiti-text-bg{
+			@include pos(a);
+			width: 100%;
+			height:100%;
+			z-index: 0;
+		}
+		&>h4,&>div{
+			@include pos(r);
+			z-index: 1;
+			text-indent: 2em;
+			margin-left: 40px;
+			margin-top: 10px;
+			//color:#828a8f;
+			color:#333;
+		}
+		&>h4{
+			text-indent: 0;
+			font-size: 36px;
+		}
+		&>div{
+			margin-top: 20px;
+		}
+		&>.zmiti-caidai{
+			@include pos(a);
+			left: -1.9rem;
+			width: 1.5rem;
+			top: 1rem;
+
+		}
+
+		&>.zmiti-caidai1{
+			left: auto;
+			right: .4rem;
+			top: -1rem;
+			width: .5rem;
+		}
+
+		.zmiti-text-line{
+			@include pos(a);
+			width: 1rem;
+			height: 4rem;
+			right: .5rem;
+			img{
+				width: .6rem;
+				@include pos(a);
+				left: .2rem;
+				bottom: 0;
+			}
+			span{
+				width: .1rem;
+				@include pos(a);
+				left: .45rem;
+				top:0;
+				height: 100%;
+				background: rgba(255,255,227,.8);
+			}
+		}
+
+
+	}
+
+	.zmiti-title{
+		@include pos(a);
+		z-index: 20;
+		top: 0;
+		left: 0;
+		width: 4.5rem;
+	}
+
+	.zmiti-year{
+		@include pos(a);
+		z-index: 20;
+		top: .2rem;
+		right: 1.2rem;
+	}
+
+	.zmiti-photo{
+		@include pos(a);
+		width: 2rem;
+		z-index: 20;
+		bottom: .7rem;
+		left: 4rem;
+		text-align: center;
+		color:#fff;
+	}
+
+	.zmiti-next,.zmiti-prev{
+		@include pos(a);
+
+		width: 1.4rem;
+		height: 1rem;
+		left: .4rem;
+		bottom: .4rem;
+		z-index: 44;
+		z-index: 100;
+
+
+		&:before,&:after{
+			content:"";
+			@include pos(a);
+			left: 0;
+			top: 60%;
+			width: 100%;
+			height: .07rem;
+			background: #fff;
+			border-top-left-radius: 10px;
+			border-bottom-left-radius: 10px;
+			box-shadow: 0 0 20px rgba(0,0,0,.7);
+			@include animation(ar 1s linear infinite alternate);
+		}
+
+		&:after{
+			width: 30%;
+			@include transform(rotate(-40deg));
+			@include transformOrigin(left);
+			
+		}
+
+	}
+
+
+
+	.zmiti-next{
+		left: auto;
+		right: .4rem;
+		//border:1px solid red;
+		&:before,&:after{
+			content:"";
+			@include pos(a);
+			left: 0;
+			top: 60%;
+			width: 100%;
+			height: .07rem;
+			background: #fff;
+			border-top-left-radius: 10px;
+			border-bottom-left-radius: 10px;
+			@include animation(ar .6s linear infinite alternate);
+		}
+
+		&:after{
+			width: 30%;
+			left: auto;
+			right: 0;
+			@include transform(rotate(40deg));
+			@include transformOrigin(right);
+			
+		}
+	}
+}
+
+
+
+@-webkit-keyframes ar {
+	from {
+		margin-top: -5px;
+	}
+
+	to {
+		margin-top: 5px;
+	}
+
 }
