--- a/components/main/index.scss
+++ b/components/main/index.scss
@@ -11,6 +11,8 @@ $color: #fffb88;
 
 	}
 
+	overflow: hidden;
+
 	opacity:0;
 	z-index: -1;
 	
@@ -31,7 +33,8 @@ $color: #fffb88;
 
 	&>.zmiti-main-canvas-C{
 		@include pos(a);
-		left: 0;top: 0;		
+		left: 0;top: 0;	
+		@include transition(.2s);
 	}
 
 	.zmiti-dashiji{
@@ -63,12 +66,42 @@ $color: #fffb88;
 			@include transform(translate3d(0,-30px,0));
 		}
 
+		.zmiti-back{
+			display: block;
+			width: 100%;
+			text-align: right;
+			@include pos(r);
+			float: right;
+			padding-right: 40px;
+			label{
+				display: none;
+			}
+			&:before,&:after{
+				content:"";
+				@include pos(a);
+				right: 12px;
+				@include transform(rotate(45deg));
+				top: 14px;
+				border:2px solid #0085d8;
+				border-bottom: none;
+				border-right: none;
+				width: 15px;
+				height: 15px;
+
+			}
+
+			&:after{
+				top:24px;
+			}
+			color:#0085d8;
+		}
+
 		@include pos(a);
 		width: 8rem;
 		left: 1rem;
 		top: 3.5rem;
 		z-index: 40;
-		padding: 24px;
+		padding: 24px 24px 0 24px;
 		box-sizing:border-box;
 		&>img.zmiti-text-bg{
 			@include pos(a);
